--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 scikit-learn==1.7.2
 scipy==1.16.3
+seaborn==0.13.2
 six==1.17.0
 threadpoolctl==3.6.0
 tomlkit==0.13.3
